Modified  index.html

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -21,6 +21,46 @@
         </p>
 
         <p>Y <em>así</em> ahora.</p>
+        <!--Lista desordenada de la compra-->
+        <ul>
+            <li>Fuet</li>
+            <li>Tomates</li>
+            <li>Nueces de Macadamia</li>
+            <li>Rollos de canela</li>
+            <li>Mozzarella</li>
+            <li>Aguacates</li>
+            <li>Guanciale</li>
+        </ul>
+        <!--Lista ordenada de TODO'S-->
+        <ol>
+            <li>Levartarme</li>
+            <li>Ducharme</li>
+            <li>Trabajar</li>
+            <li>Estudiar</li>
+            <li>Hacer la cena</li>
+            <li>Dormir</li>
+        </ol>
+
+        <!--Lista desordenada de lugares que visitaré-->
+        <ul>
+            <li>Roma</li>
+            <li>Escocia</li>
+            <li>Japón</li>
+            <li>Londres</li>
+            <li>El Vaticano</li>
+            <li>Doha</li>
+            <li>India</li>
+        </ul>
+        
+        <!--Lista ordenada de  Videojuegos favoritos-->
+        <ol>
+            <li>DarkSouls</li>
+            <li>Elden Ring</li>
+            <li>TLOZ</li>
+            <li>League</li>
+            <li>TOP</li>
+        </ol>
+        
 
         <!-- Ésto es un comentario de html-->
     </body>
