--- a/html-boilerplate/odin-links-and-images/index.html
+++ b/html-boilerplate/odin-links-and-images/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New</title>
+    <title>Homepage Test</title>
 </head>
 
 <body>
 <h1>Homepage</h1>
 <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me</a>
-
+<a href="pages/about.html">About</a>
 
 </body>
 </html>
