--- a/html-boilerplate/odin-links-and-images/index.html
+++ b/html-boilerplate/odin-links-and-images/index.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Homepage</h1>
 <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me</a>
-<a href="pages/about.html">About</a>
+<a href="./pages/about.html">About</a>
 
+<img src="images/dog.png">
 </body>
 </html>
