--- a/html-boilerplate/odin-links-and-images/index.html
+++ b/html-boilerplate/odin-links-and-images/index.html
@@ -10,6 +10,6 @@
 <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me</a>
 <a href="./pages/about.html">About</a>
 
-<img src="images/dog.png">
+<img src="images/dog.png" alt="TOP Doggo" height="310" width="310">
 </body>
 </html>
