--- a/html-boilerplate/odin-links-and-images/pages/about.html
+++ b/html-boilerplate/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
 	
 	<body>
 		<h1>About Page</h1>
-		<img src="../images/dog.png">
+		<img src="../images/dog.png" alt="TOP Doggo" height="310" width="310">
 	</body>	
 </html>
