--- a/html-boilerplate/odin-links-and-images/index.html
+++ b/html-boilerplate/odin-links-and-images/index.html
@@ -7,9 +7,13 @@
 
 <body>
 <h1>Homepage</h1>
-<a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me</a>
-<a href="./pages/about.html">About</a>
+<!--Aquí se linkea el about de TOP añadiendo target y rel-->
+<a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">TOP About</a>
 
+<!--Aquí se linkea el about-->
+<a href="./pages/about.html" target="_blank" rel="noopener noreferrer">About</a>
+
+<!--Aquí se añade al perro-->
 <img src="images/dog.png" alt="TOP Doggo" height="310" width="310">
 </body>
 </html>
